<resources>
    <string name="app_name">Kinopoisk</string>
    <string name="internet_error_info">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>
    <string name="repeat">Повторить</string>
    <string name="top">Популярные</string>
    <string name="favourite">Избранное</string>
    <string name="search">Поиск</string>
    <string name="genres">Жанры:</string>
    <string name="countries">Страны:</string>
</resources>